--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/liga_basket_100
-spring.datasource.username=david
+spring.datasource.username=postgres
 spring.datasource.password=d4v1d001
 
-server.port=8181
+server.port=8080
